--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,12 @@ dependencies:
   gap: ^3.0.1
   provider: ^6.1.2
   flutter_staggered_grid_view: ^0.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.10
   flutter_test:
     sdk: flutter
 
