--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  draggable_fab: ^0.1.4
+  flutter_speed_dial: ^7.0.0
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
 
 dev_dependencies:
   hive_generator: ^2.0.1
