--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   firebase_core: ^3.0.0
   firebase_auth: ^5.0.0
+  country_picker: ^2.0.26
 
 dev_dependencies:
   hive_generator: ^2.0.1
