--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_core: ^3.0.0
   firebase_auth: ^5.0.0
   country_picker: ^2.0.26
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   hive_generator: ^2.0.1
