--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
   firebase_auth: ^5.0.0
   country_picker: ^2.0.26
   loading_animation_widget: ^1.2.1
+  google_ml_kit: ^0.18.0
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
+  speech_to_text: ^6.6.2
+  avatar_glow: ^3.0.1
 
 dev_dependencies:
   hive_generator: ^2.0.1
