--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,6 @@ dependencies:
   hive_flutter: ^1.1.0
   draggable_fab: ^0.1.4
   flutter_speed_dial: ^7.0.0
-  firebase_core: ^3.0.0
-  firebase_auth: ^5.0.0
   country_picker: ^2.0.26
   loading_animation_widget: ^1.2.1
   google_ml_kit: ^0.18.0
@@ -31,9 +29,16 @@ dependencies:
   speech_to_text: ^6.6.2
   avatar_glow: ^3.0.1
   flutter_zoom_drawer: ^3.2.0
+  get_it: ^7.7.0
+  injectable: ^2.4.4
+  dartz: ^0.10.1
+
+  animated_text_kit: ^4.2.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   hive_generator: ^2.0.1
+  injectable_generator: ^2.6.2
   build_runner: ^2.4.10
   flutter_test:
     sdk: flutter
