--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
 
   animated_text_kit: ^4.2.2
   shared_preferences: ^2.3.2
+  share_plus: ^10.0.2
 
 dev_dependencies:
   hive_generator: ^2.0.1
